# FabConvert

./: .gitignore  README.md  conftest.py  pyproject.toml
docs/: changelog.md  cli.md  contributing.md  formats.md  gui.md  index.md  library.md  quickstart.md  troubleshooting.md
fabconvert/: api.py  cli.py
fabconvert/alignment/: detect.py  registration.py
fabconvert/core/: geometry.py  units.py
fabconvert/formats/: dxf_io.py  edgepair.py  gerber_io.py  medialaxis.py  svg_io.py
fabconvert/gui/: app.py  convertworker.py  preview.py  theme.py
tests/: test_dxf_closed_trace_loops.py  test_dxf_open_chains.py  test_edgepair.py  test_medialaxis.py
tests/fixtures/: test2-F_Cu.dxf
